# multiple-kinects-auto-calibration

./: .gitignore  .gitignore~  README.md
multiple_kinects/: CMakeLists.txt  package.xml
multiple_kinects/cfg/: line_detection.cfg  subsampling.cfg
multiple_kinects/rviz/: workspace.rviz
multiple_kinects/src/: cv_node.cpp  test_node.cpp
pc_processing/: CMakeLists.txt  package.xml
pc_processing/include/pc_processing/: pc_processing.h  test_node.h
pc_processing/rviz/: workspace.rviz
pc_processing/src/: cv_node.cpp  pc_processing.cpp  pc_processing_nodelet.cpp  test_node.cpp
src/calib/: CMakeLists.txt  package.xml
src/calib/config/: Cloud.cfg  ICP.cfg  Matching.cfg  Merging.cfg  Node.cfg  Plane.cfg  PlaneDetection.cfg  Planes.cfg  Preprocessing.cfg  Registration.cfg  Stitch.cfg  TF.cfg  TransformEstimation.cfg  backup.yaml  cam1.yaml  cam1_cam2.yaml  cam2.yaml  cam3_scene.yaml  default_match.yaml  default_planes.yaml  default_preproc.yaml  default_transform.yaml  match.yaml  match_auto.yaml  planes_auto.yaml  planes_calib.yaml  planes_planes.yaml  planes_publish.yaml  preproc_auto.yaml  registration.yaml  registration_icp.yaml  registration_keypoints.yaml  registration_publish.yaml  scene.yaml  sim_transform.yaml  transform.yaml
src/calib/include/calib/: Cloud.h  Matching.h  Merging.h  PlaneDetector.h  Preprocessing.h  TransformEstimator.h  icp_node.h  merging_node.h  pc_conv.h  preprocessing_node.h  registration_node.h  tf_node.h  transform_estimation_node.h
src/calib/launch/: add_cam3.launch  auto_calib.launch  calib.launch  calib_icp.launch  calib_icp_model.launch  icp_calib.launch  kinect.launch  manual_calib.launch  publish.launch  publish_gt.launch  publish_merged.launch  rviz.launch  simulation.launch
src/calib/models/: sim_pc.pcd
src/calib/msg/: PlaneClouds.msg  Planes.msg  TF.msg
src/calib/rviz/: calib.rviz  main.rviz  result.rviz
src/calib/src/: .pc_conv.cpp.swp  Cloud.cpp  Matching.cpp  Merging.cpp  PlaneDetector.cpp  Preprocessing.cpp  TransformEstimator.cpp  icp_node.cpp  matching_node.cpp  merging_node.cpp  pc_conv.cpp  plane_detection_node.cpp  plot_node.py  preprocessing_node.cpp  registration_node.cpp  stitching_node.cpp  tf_node.cpp  tf_publisher_node.cpp  transform_estimation_node.cpp
src/calib/worlds/: kitchen.world
src/geometry/: CMakeLists.txt  package.xml
src/geometry/include/geometry/: Plane.h  PointCloud.h
src/geometry/src/: PointCloud.cpp
src/pc_processing/: CMakeLists.txt
src/pc_processing/cfg/: line_detection.cfg  registration.cfg
src/pc_processing/include/pc_processing/: PcProcessing.h  pc_processing.h
src/pc_processing/launch/: parameter_tuning.launch
src/pc_processing/rviz/: workspace.rviz
src/pc_processing/src/: PcProcessing.cpp  pc_processing.cpp  pc_processing_nodelet.cpp  registration_params.cpp
src/registration/src/geometry/: CMakeLists.txt
src/registration/src/geometry/cfg/: SubSampling.cfg
src/registration/src/geometry/include/geometry/: Line.h  Plane.h  PointCloud.h
src/registration/src/geometry/src/: Line.cpp  Plane.cpp  PlaneDetector.cpp  PointCloud.cpp
src/registration/src/plane_detection/: CMakeLists.txt  package.xml
src/registration/src/plane_detection/cfg/: PlaneDetection.cfg
src/registration/src/plane_detection/hist/: histograms_3d.ipynb  histograms_rgb_distance.ipynb
src/registration/src/plane_detection/hist/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  histograms_3d-checkpoint.ipynb
src/registration/src/plane_detection/hist/cam1/plane1/: plane_hist_256_1231741216.txt  plane_hist_256_1231742216.txt  plane_hist_256_1231743216.txt  plane_hist_256_1231744216.txt  plane_hist_256_1231745216.txt  plane_hist_256_1231746216.txt  plane_hist_256_1231747216.txt  plane_hist_256_1231748216.txt  plane_hist_256_1231749216.txt  plane_hist_256_1231750216.txt  plane_hist_256_1231751216.txt  plane_hist_256_1231752216.txt  plane_hist_256_1231753216.txt  plane_hist_256_1231754216.txt  plane_hist_256_1231755216.txt  plane_hist_256_1231756216.txt  plane_hist_256_1231757216.txt  plane_hist_256_1231758216.txt  plane_hist_256_1231759216.txt  plane_hist_256_1231760216.txt  plane_hist_256_1231761216.txt  plane_hist_256_1231762216.txt  plane_hist_256_1231763216.txt  plane_hist_256_1231764216.txt  plane_hist_256_1231765216.txt  plane_hist_256_1231766216.txt  plane_hist_256_1231767216.txt  plane_hist_256_1231768216.txt  plane_hist_256_1231769216.txt  plane_hist_256_1231770216.txt  (+4 more)
src/registration/src/plane_detection/include/plane_detection/: PlaneDetector.h  histogram_printer_node.h  plane_detection.h  plane_detection_node.h
src/registration/src/plane_detection/launch/: plane_1_2.launch  plane_detection.launch
src/registration/src/plane_detection/src/: PlaneDetector.cpp  histogram_printer_node.cpp  plane_detection_node.cpp  plane_detection_nodelet.cpp  plot_histograms.py
src/registration/src/registration/: CMakeLists.txt  package.xml
src/registration/src/registration/cfg/: Cutting.cfg  ISS.cfg  Keypoints.cfg  Merging.cfg  OutliersRemoval.cfg  PoseEstimation.cfg  RadiusFiltering.cfg
src/registration/src/registration/include/registration/: TransformEstimator.h  icp_node.h  line_matching_node.h  merging_node.h  plane_matching_node.h  preprocessing_node.h  robust_pose_estimation_node.h
src/registration/src/registration/launch/: cam23.launch  cam_1_2.launch  fix_cam.launch  preprocessing.launch  reg_1_2.launch  register_all.launch  registration.launch  registration_123.launch  registration_plane-plane.launch  scene.launch
src/registration/src/registration/rec/registration/: cam3_cam2.log~
src/registration/src/registration/src/: TransformEstimator.cpp  correspondance.cpp  icp_node.cpp  line_matching_node.cpp  merging_node.cpp  plane_detection_node.cpp  plane_matching_node.cpp  preprocessing_node.cpp  result_saving_node.cpp  rg_seg_node.cpp  robust_pose_estimation_node.cpp
src/registration_old/src/geometry/: CMakeLists.txt  package.xml
src/registration_old/src/geometry/include/geometry/: Plane.h  PointCloud.h
src/registration_old/src/geometry/src/: Line.cpp  PointCloud.cpp
(+1696 files in other folders)
