<?xml version="1.0"?>
<package>
    <name>multiple_kinects</name>
    <version>0.0.0</version>
    <description>The multiple_kinects package</description>

    <maintainer email="smaillot@todo.todo">smaillot</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>OpenCV</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>OpenCV</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
