<?xml version="1.0"?>
<package>
  <name>registration</name>
  <version>0.0.0</version>
  <description>The registration package</description>

  <maintainer email="inhands-user3@todo.todo">inhands-user3</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry</build_depend>
  <run_depend>geometry</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>sensor_msgs</build_depend>

  <build_depend>geometry</build_depend>
  <run_depend>geometry</run_depend>

  <export>

  </export>
</package>
