<?xml version="1.0"?>
<package>
  <name>geometry</name>
  <version>0.0.0</version>
  <description>The geometry package</description>

  <maintainer email="inhands-user3@todo.todo">inhands-user3</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend> 

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend> 

  <build_depend>sensor_msgs</build_depend>


  <export>

  </export>
</package>
